--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,8 @@
+@charset "utf-8";
+
+// place Bulma overrides here
+@import "../node_modules/bulma/bulma.sass";
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
